climbear-server/k8s/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: climbear-route
  namespace: climbear
spec:
  parentRefs:
    - name: web-gateway
      namespace: gateway
      sectionName: http-climbear
    - name: web-gateway
      namespace: gateway
      sectionName: https-climbear
  hostnames:
    - climbear.sonhs.com
  rules:
    # AI 서버 라우팅
    - matches:
        - path:
            type: PathPrefix
            value: /ai/v1
      backendRefs:
        - name: climbear-ai-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /docs
      backendRefs:
        - name: climbear-ai-service
          port: 80
    - matches:
        - path:
            type: Exact
            value: /openapi.json
      backendRefs:
        - name: climbear-ai-service
          port: 80
    # Spring 서버 라우팅
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: climbear-server-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /swagger-ui
      backendRefs:
        - name: climbear-server-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /v3/api-docs
      backendRefs:
        - name: climbear-server-service
          port: 80
